# gooEditor

./: Cargo.toml  Changelog.md  README.md  goo.hexpat
.github/workflows/: build.yml
examples/: decode.rs  gui.rs
src/: default.rs  encoded_layer.rs  file.rs  header_info.rs  layer_content.rs  lib.rs  main.rs  misc.rs  preview_image.rs  slice_config.rs
src/serde/: deserializer.rs  mod.rs  serializer.rs  types.rs
tests/: layer_pixels.rs
