[package]
name = "goo"
version = "0.1.0"
edition = "2021"

categories = ["parser-implementations", "rendering::data-formats"]
description = "Library for encoding and decoding Elegoo's `.goo` file format."
documentation = "https://docs.rs/goo"
exclude = [".github/"]
keywords = ["elegoo", "goo"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/connorslade/goo"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
image = "0.25.1"
nalgebra = "0.33.0"
