[package]
name = "goo"
version = "0.1.0"
edition = "2021"

categories = ["parser-implementations", "rendering::data-formats"]
description = "Library for encoding and decoding Elegoo's `.goo` file format."
documentation = "https://docs.rs/goo"
exclude = [".github/"]
keywords = ["elegoo", "goo"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/connorslade/goo"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", optional = true }
image = { version = "0.25.1", optional = true }

[dev-dependencies]
goo = { path = ".", features = ["image"] }
clap = { version = "4.5.7", features = ["derive"] }
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["image"] }
rfd = "0.15.3"

[features]
# This feature adds in the `image` crate and allows you to create a `PreviewImage` from an `image::RgbaImage`.
image = ["dep:image"]

# This feature adds in the `chrono` crate and correctly fills in the `file_time` field when using `GooFile::from_slice_result`.
chrono = ["dep:chrono"]

[package.metadata.docs.rs]
all-features = true
